--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/node": "^7.7.4",
     "@babel/preset-env": "^7.7.6",
     "babel-jest": "^24.9.0",
+    "eslint": "^6.7.2",
     "jest": "^24.9.0"
   }
 }
