feat(fileSystem) чтение запись и удаление файлов

--- a/package.json
+++ b/package.json
@@ -28,5 +28,7 @@
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   },
-  "dependencies": {}
+  "dependencies": {
+    "errno": "^0.1.7"
+  }
 }
