--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
-    "errno": "^0.1.7"
+    "errno": "^0.1.7",
+    "javascript-state-machine": "^3.1.0"
   }
 }
