--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "errno": "^0.1.7",
-    "javascript-state-machine": "^3.1.0"
+    "javascript-state-machine": "^3.1.0",
+    "lodash": "^4.17.15"
   }
 }
